terraform/environments/cloud-platform/cluster-components/old/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: test-app
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: ministryofjustice/helloworld-go:0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
