terraform/environments/cloud-platform/cluster-components/old/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: test-app
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
